# django-view-manager

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  dev_requirements.txt  flake8_requirements.txt  manage.py  pyproject.toml  test_requirements_django_3.2.txt  test_requirements_django_4.0.txt  test_requirements_django_4.1.txt
.circleci/: config.yml
config/settings/: test.py
django_view_manager/utils/management/commands/: makeviewmigration.py
tests/: test_case.py  test_runner.py
tests/animals/: apps.py  models.py  tests.py
tests/employees/: apps.py  models.py  tests.py
tests/employees/migrations/: 0001_initial.py  0002_employee_middle_name.py
tests/food/: apps.py  models.py  tests.py
tests/musicians/: apps.py  models.py  tests.py
tests/musicians/migrations/: 0001_initial.py  0002_create_band_info_view.py  0003_add_founded_date.py  0003_add_member_count.py  0004_merge_0003_add_founded_date_0003_add_member_count.py
tests/musicians/sql/: view-band_info-0002.sql  view-band_info-0003.sql  view-band_info-latest.sql
tests/store/: apps.py  models.py  tests.py
tests/store/migrations/: 0001_initial.py  0002_create_product_calculations_view.py  0003_create_purchased_product_calculations.py
tests/store/sql/: view-store_productcalculations-0002.sql  view-store_productcalculations-latest.sql  view-store_purchasedproductcalculations-latest.sql
tests/test_data/store/migrations/: 0004_add_markup_amount_to_product_calculations.py
